--- a/index.html
+++ b/index.html
@@ -8,3 +8,22 @@
 </head>
 <body>
     <div class="container">
+        <h1>Jogo de Matemática</h1>
+        <p>Escolha o modo do jogo:</p>
+        <button onclick="iniciarJogo('basico')">Modo Básico</button>
+        <button onclick="iniciarJogo('desafio')">Modo Desafio</button>
+
+        <div id="area-jogo" style="display: none;">
+            <p id="pergunta"></p>
+            <input type="number" id="resposta" placeholder="Digite sua resposta">
+            <button onclick="verificarResposta()">Responder</button>
+            
+            <p id="resultado"></p>
+            <button onclick="novaPergunta()">Nova pergunta</button>
+            <p>Pontuação: <span id="pontuacao">0</span></p>
+        </div>
+    </div>
+
+    <script src="js/game.js"></script>
+</body>
+</html>
